<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_appointments" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_schedule" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_pin_drop_black_24dp"
            android:title="@string/menu_location" />



        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />

    </group>


</menu>
