<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nour.nourclinic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.nour.nourclinic.ui.appointments.AppointmentsFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.nour.nourclinic.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />


    <fragment
        android:id="@+id/nav_location"
        android:name="com.nour.nourclinic.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />


    <fragment
    android:id="@+id/nav_logout"
    android:name="com.nour.nourclinic.ui.logout.LogoutFragment"
    android:label="@string/menu_appointments"
    tools:layout="@layout/fragment_logout" />

    
</navigation>